plugins {
    id 'net.neoforged.moddev' version '2.0.141'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

repositories {
    mavenLocal()
    maven { url = 'https://maven.neoforged.net/releases' }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://maven.shedaniel.me/' }
    mavenCentral()
}

sourceSets {
    test {
        compileClasspath += sourceSets.main.compileClasspath + sourceSets.main.output
        runtimeClasspath += sourceSets.main.runtimeClasspath + sourceSets.main.output
    }
}

// ─── NeoForge Configuration ─────────────────────────────────────────────────
neoForge {
    version = project.neo_version

    accessTransformers.from(file('src/main/resources/META-INF/accesstransformer.cfg'))

    runs {
        client {
            client()
            // Mirrors 1.12.2's VERSION.startsWith("$") fallback: any dev workspace is "DEV".
            // Enables BCLib.DEV-gated affordances (Power Tester block, /bcsoundtest command, ...).
            systemProperty 'buildcraft.dev', 'true'
            // Profiling diagnostics (drop spark NeoForge jar into run/mods/ for /spark profiler).
            // Remove these args once perf investigation is done — they write a continuous GC log
            // plus a JDK Flight Recorder dump (run/bc-profile.jfr) when the client exits.
            jvmArguments.addAll(
                    '-Xlog:gc*:file=gc.log:time,uptime,level,tags',
                    '-XX:+UnlockDiagnosticVMOptions',
                    '-XX:FlightRecorderOptions=stackdepth=256',
                    '-XX:StartFlightRecording=name=BuildCraft,settings=profile,filename=bc-profile.jfr,dumponexit=true'
            )
        }
        server {
            server()
            systemProperty 'buildcraft.dev', 'true'
        }
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enableGameTest', 'true'
            // Power Tester block (BCLib.DEV-gated) is used as the sink in
            // PipeFlowPowerTester — it accepts unlimited MJ so the test isn't
            // race-sensitive to a bounded battery filling up between ticks.
            systemProperty 'buildcraft.dev', 'true'
            gameDirectory = project.file('run-gameTestServer')
        }
    }

    mods {
        buildcraftunofficial {
            sourceSet sourceSets.main
            sourceSet sourceSets.test
        }
    }
}

dependencies {

    // JEI
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // REI — No compatible versions for MC 26.1 yet
    // compileOnly 'me.shedaniel:RoughlyEnoughItems-api-neoforge:16.0.799'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Exclude REI compat modules from compilation — no MC 26.1 versions available
tasks.withType(JavaCompile).configureEach {
    exclude '**/compat/rei/**'
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

tasks.named('processResources') {
    var replaceProperties = [
            mod_version: project.mod_version
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// ─── Distribution JAR ────────────────────────────────────────────────────────
tasks.named('jar') {
    archiveBaseName = 'BCunofficial'
    archiveVersion = project.mod_version

}

task dumpMethods(type: JavaExec) {
    mainClass = 'buildcraft.TestDump'
    classpath = sourceSets.main.runtimeClasspath
}
